src/test/resources/shell/shellSyntaxErr/basic/badComment.wacc
# program has missing comment declaration

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

  oops, this is supposed to be a comment
  print "Hello World!\n"
